fixed spacing on stories page

--- a/styles/stories.css
+++ b/styles/stories.css
@@ -1,4 +1,6 @@
  @import url('https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Satisfy&family=ZCOOL+QingKe+HuangYou&display=swap');
+
  * {
   box-sizing: border-box;
   padding: 0;
@@ -126,10 +128,13 @@ section {
 h1,p {
       text-align: center;
     }
+ h1{
+   margin-top:17px
+ }   
     .grid-wrapper {
       --auto-grid-min-size:12rem;
       display: grid;
-      grid-gap: 8rem;
+      grid-gap: 3rem 8rem;
       grid-template-columns: repeat(
         auto-fill,
         minmax(var(--auto-grid-min-size), 1fr)
@@ -174,12 +179,16 @@ h1,p {
       color: black;
       display: inline-block;
       font-family: 'Open Sans', sans-serif;
-      font-size: 0.5rem;
+      font-size: 1rem;
       font-weight: 700;
       padding: 0.3em 1em;
       text-decoration: none;
       position: relative;
       bottom: -50px;
+      height:30px;
+    }
+    .p-cta{
+      padding: 7px;
     }
     .cta:hover {
       background-color: lightgrey;
